--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,14 @@
 [tool.poetry]
-name = "test-repo"
+name = "raptor-search"
 version = "0.1.0"
 description = ""
 authors = ["Frederik <steinertrash@gmail.com>"]
 readme = "README.md"
+packages = [{include = "raptor_search", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pandas = "^2.1.3"
 
 [tool.poetry.group.dev.dependencies]
 
